--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   animated_text_kit: ^4.2.2
+#  table_calendar: ^3.1.3
+  image_picker: ^0.8.7+4
+  intl: ^0.18.0
+  widgets_to_image: ^1.0.0
+  share_plus: ^10.1.3
+  external_path: ^2.0.1
+  flutter_colorpicker: ^1.0.3
+  flutter_animated_button: ^2.0.4
 
 
 dev_dependencies:
@@ -63,7 +71,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/cards/
+    - images/diya/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
